# FileEncryptionBE

./: .gitignore  docker-compose.yml
auth/: Cargo.toml  Dockerfile  build.rs
auth/proto/: auth.proto
auth/src/: main.rs
auth/src/service/: auth_service.rs
file/: Cargo.toml  Dockerfile  build.rs
file/proto/: file.proto
file/src/: file.rs  main.rs  proto.rs  service.rs
file/src/entity/: file.rs
file/src/service/: cipher.rs  file.rs  mod.rs
gateway/: Cargo.toml  Dockerfile  drizzle.config.ts  package.json
gateway/migrations/: 0000_great_madame_hydra.sql  0000_many_gravity.sql
gateway/migrations/meta/: 0000_snapshot.json  _journal.json
gateway/src/: main.rs  main.ts
gateway/src/common/: index.ts  types.ts
gateway/src/database/: drizzle.module.ts  schema.ts
gateway/src/database/types/: drizzle.d.ts
gateway/src/guards/: jwt.guard.ts  role.guard.ts
gateway/src/modules/: app.module.ts
gateway/src/modules/auth/: auth.controller.ts  auth.service.ts
gateway/src/modules/auth/dto/: auth.dto.ts
gateway/src/routes/: auth.rs
