[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
prost = "0.13.1"
sea-orm = {version = "1.1.13", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tokio = {version = "1.45.1", features = ["full"]}
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
