[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.1"
sea-orm = { version = "1.1.13", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
