[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.41"
prost = "0.13.1"
sea-orm = { version = "1.1.13", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
tonic-reflection = "0.13.1"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.13.1"
