[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
prost = "0.13.1"
sea-orm = { version = "1.1.13", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
